# dummy

./: LICENSE.md  Makefile  pyproject.toml
niqodea/dummy/: client.py
tests/: test_client.py
