[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["niqodea"]

[project]
name = "niqodea-dummy"
version = "0.1.0"
description = "Dummy project"
authors = [{name = "Nicola De Angeli", email = "112023843+niqodea@users.noreply.github.com"}]
readme = "README.md"
requires-python = "~= 3.10"
dependencies = [
    "requests ~= 2.32",
]

[dependency-groups]
build = [
    "hatch ~= 1.14",
]

dev = [
    "mypy ~= 1.15",
    "ruff ~= 0.9.6",
    "types-requests ~= 2.32",
]

[tool.ruff]
line-length = 79  # Ref: https://peps.python.org/pep-0008/#maximum-line-length

[tool.mypy]
explicit_package_bases = true

[tool.ruff.lint]
select = [
  "B",  # flake8-bugbear
  "E",  # pycodestyle
  "F",  # Pyflakes
  "I",  # isort
  "SIM",  # flake8-simplify
  "UP",  # pyupgrade
]
